# Avito_DS_Bootcamp_2026

./: .gitignore  README.md  reranker_ft_k50_ep3_weights.tar.gz.sha256
solution/: .gitignore  Makefile  compare_rerankers.py  holdout_check.py  pyproject.toml  refit_sweep.py  requirements.txt  run_overnight_ft.sh
solution/configs/: default.yaml
solution/configs/experiments/: emb_bge_m3.yaml  emb_e5.yaml  emb_frida.yaml  emb_user_bge_m3.yaml  lexical_only.yaml  rerank_bge_ft.yaml  rerank_bge_ft_labeled.yaml  rerank_bge_ft_synth.yaml  rerank_bge_v2_m3.yaml  rerank_bge_zs_c40.yaml  rerank_ft_full500.yaml  rerank_ft_k30.yaml  rerank_ft_k50.yaml  rerank_ft_k50_ep3.yaml  rerank_ft_lemma.yaml  rerank_ft_lemma_graph.yaml  rerank_jina_v3.yaml  rerank_qwen3_0_6b.yaml  rerank_qwen3_4b.yaml  rerank_qwen3_8b_q4_k_m.yaml
solution/experiments/: article_query_graph_diagnostics.ipynb  refit_lr_on_holdout.py  robustness_error_analysis.ipynb  score_holdout_fold_models.py  score_query_variants.py
solution/src/support_search/: __init__.py  cli.py  config.py  logging_utils.py  ltr.py
solution/src/support_search/contracts/: __init__.py  checks.py  schemas.py
solution/src/support_search/data/: __init__.py  io.py  splits.py
solution/tests/: mini_data.py
solution/tests/smoke/: test_pipeline.py
solution/tests/unit/: test_blend.py  test_contracts.py  test_dense.py  test_export.py  test_fusion.py  test_graphs.py  test_ltr.py  test_metrics.py  test_preprocess.py  test_rerank.py  test_rerank_multichunk.py  test_retrievers.py  test_splits.py  test_train_scheduler.py
(+36 files in other folders)
